# nonebot-dst-management

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AI_COMPLETE_PLAN.md  AI_FEATURES_COMPLETE.md  AI_FEATURES_PLAN.md  AI_IMPROVEMENT_PLAN.md  CHANGELOG.md  COMMANDS.md  COMMANDS_COMPLETE.md  COMMAND_ALIASES.md  COMPLETE.md  CURRENT_STATUS.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  DEV_PROGRESS.md  DEV_STATUS.md  FINAL_REPORT.md  INDEX.md  LICENSE  NEXT_STEPS.md  PHASE_A_UI_PLAN.md  PHASE_B_SMART_PLAN.md  PHASE_C_AUTO_PLAN.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CN_ALIASES.md  ROADMAP.md  SIGN_IN_PLAN.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_PLAN_v2.md  STATUS.md  TEST_REPORT.md  TODO.md  UI_TEMPLATES_GUIDE.md  apply_diagnostic_patch.py  init_project.sh  (+3 more)
docs/: CODE_REVIEW_console.md  CODE_REVIEW_mod.md  MOD_MANAGEMENT_DESIGN.md  SIGN_IN_USER_GUIDE.md  alconna-migration-plan.md
examples/: bot.py
nonebot_plugin_dst_management/: __init__.py  config.py  help_templates.py
nonebot_plugin_dst_management/ai/: __init__.py  analyzer.py  archive_analyzer.py  base.py  client.py  config.py  mod_parser.py  prompt.py  qa.py  recommender.py  session.py
nonebot_plugin_dst_management/client/: __init__.py  api_client.py
nonebot_plugin_dst_management/commands/: __init__.py  ai_analyze.py  ai_mod_parse.py  ai_recommend.py  archive.py  auto_discovery.py  backup.py  base.py  config_ui.py  console.py  default_room.py  handlers.py  help.py  mod.py  player.py  registry.py  room.py  sign.py
nonebot_plugin_dst_management/database/: __init__.py  connection.py  models.py
nonebot_plugin_dst_management/handlers/: __init__.py  ai_analyze.py  ai_archive.py  ai_mod_apply.py  ai_mod_parse.py  ai_qa.py  ai_recommend.py  archive.py  auto_discovery.py  backup.py  config_ui.py  console.py  default_room.py  help.py  mod.py  player.py  player_enhanced.py  room.py  sign.py
nonebot_plugin_dst_management/helpers/: __init__.py  commands.py  formatters.py  fuzzy.py  room_context.py
nonebot_plugin_dst_management/services/: archive_service.py  cluster_store.py  reward_service.py  sign_service.py
nonebot_plugin_dst_management/services/monitors/: __init__.py  sign_monitor.py
nonebot_plugin_dst_management/utils/: __init__.py  formatter.py  path.py  permission.py
tests/: conftest.py  mock_api.py  mock_api_simple.py  test_ai_analyzer.py  test_ai_archive_analyzer.py  test_ai_base.py  test_ai_client.py  test_ai_config.py  test_ai_mod_parser.py  test_ai_qa.py  test_ai_recommender.py  test_ai_session.py  test_alconna_migration.py  test_api_client.py  test_api_client_validations.py  test_archive_service.py  test_config_env.py  test_database.py  test_database_sign.py  test_default_room.py  test_formatter.py  test_handlers_ai_mod_apply.py  test_handlers_ai_runtime.py  test_handlers_archive_helpers.py  test_handlers_archive_runtime.py  test_handlers_default_room_runtime.py  test_handlers_help_runtime.py  test_handlers_mod_helpers.py  test_handlers_mod_runtime.py  test_handlers_player_enhanced_runtime.py  test_handlers_player_runtime.py  test_handlers_runtime.py  test_handlers_sign.py  test_handlers_sign_runtime.py  test_helpers_commands.py  test_helpers_commands_example.py  test_local.py  test_permission.py  test_phase_b_session_lock.py  test_phase_c_auto_discovery.py  (+5 more)
